@@ -137,3 +137,8 @@ in the database.  There are several settings in php.ini which you may need to mo
     upload_max_filesize - max size for uploaded files
     post_max_size       - max size of all form data submitted via POST (including files)
 
+User accounts used to have 'enabled' flag, which allowed individual blocking and
+unblocking of each account. This flag was dropped in favor of existing mean of access
+setup (RackCode). Systems, which had blocked user accounts, have to be reviewed for
+consistency.
+
