@@ -430,18 +430,11 @@ $tabhandler['userlist']['default'] = 'renderUserList';
 $tabhandler['userlist']['edit'] = 'renderUserListEditor';
 $ophandler['userlist']['edit']['updateUser'] = 'updateUser';
 $ophandler['userlist']['edit']['createUser'] = 'createUser';
-$ophandler['userlist']['edit']['disableUser'] = 'disableUser';
-$ophandler['userlist']['edit']['enableUser'] = 'enableUser';
 $msgcode['updateUser']['OK'] = 39;
 $msgcode['updateUser']['ERR1'] = 103;
 $msgcode['updateUser']['ERR1'] = 104;
 $msgcode['createUser']['OK'] = 40;
 $msgcode['createUser']['ERR'] = 102;
-$msgcode['disableUser']['OK'] = 41;
-$msgcode['disableUser']['ERR1'] = 107;
-$msgcode['disableUser']['ERR2'] = 106;
-$msgcode['enableUser']['OK'] = 42;
-$msgcode['enableUser']['ERR'] = 105;
 
 $page['user']['title_handler'] = 'dynamic_title_user';
 $page['user']['parent'] = 'userlist';
