@@ -1,5 +1,5 @@
-INSERT INTO `UserAccount` (`user_id`, `user_name`, `user_enabled`, `user_password_hash`, `user_realname`)
-VALUES (1,'admin','yes',sha1(
+INSERT INTO `UserAccount` (`user_id`, `user_name`, `user_password_hash`, `user_realname`)
+VALUES (1,'admin',sha1(
 
 # Uncomment and change the next line to your password, e.g.:
 # 'mysecretpassword'
